update java-new-feature-introduction.md