@@ -1,4 +1,4 @@
-# 现代 Java 新特新 
+# 现代 Java 新特新
 
 ![](https://image.cdn.yangbingdong.com/image/java-new-feature-introduction/4588529f5a4e87b6bd960b74d97c6f96-180272.png)
 
@@ -51,7 +51,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
   - 内存优化, 时间换空间
 - 集合（Collections）：[***JEP 269***](https://openjdk.org/jeps/269)，**集合接口提供便利的工厂方法**，如，`Set.of(...)`
 - 并发（Concurrency）：[***JEP 266***](https://openjdk.org/jeps/266)，`CompletableFuture` 以及其他并发组件提升
-  - Reactive Streams:  `java.util.concurrent.Flow` 
+  - Reactive Streams:  `java.util.concurrent.Flow`
 - 编译器（Compiler）：[***JEP 274***](https://openjdk.org/jeps/274)，提升 `MethodHandle` 通用性以及更好地编译优化
   - `MethodHandle` 以及其他反射方式性能对比: [***Java Reflection, but Faster***](https://dzone.com/articles/java-reflection-but-faster)
 - 注解（Annotation）：[***JEP 277***](https://openjdk.org/jeps/277)，`@Deprecated` 注解增加 `since` 和 `forRemoval` 属性，丰富 API 淘汰策略
@@ -75,6 +75,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 **新增**
 
 - String **压缩**：[***JEP 254: Compact Strings***](https://openjdk.org/jeps/254)
+- [***JEP 295: Ahead-of-Time Compilation***](https://openjdk.org/jeps/295)
 
 **更新**
 
@@ -108,7 +109,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 **新增**
 
 - 本地变量类型推断: [***JEP 286: Local-Variable Type Inference***](https://openjdk.org/jeps/286)
-  - 用 var 来声明变量, 相关阅读:  [***Java 10 新特性之局部变量类型推断***](https://zhuanlan.zhihu.com/p/34911982) 
+  - 用 var 来声明变量, 相关阅读:  [***Java 10 新特性之局部变量类型推断***](https://zhuanlan.zhihu.com/p/34911982)
 
 ### 主要 API 变化
 
@@ -119,7 +120,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 - 集合增强
   -  `List`，`Set`，`Map` 提供了静态方法`copyOf()`返回入参集合的一个不可变拷贝
 -  `java.util.stream.Collectors` 中新增了静态方法，用于将流中的元素收集为不可变的集合
-  - `Collectors.toUnmodifiableList()`, `Collectors.toUnmodifiableSet()`
+- `Collectors.toUnmodifiableList()`, `Collectors.toUnmodifiableSet()`
 - 安全（Security）：
   - [***JEP 319***](https://openjdk.org/jeps/319)，默认根证书
 
@@ -127,8 +128,8 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 **新增**
 
-- **JIT Compiler**：[***JEP 317***](https://openjdk.org/jeps/317) 实验性的 Java 编写的 JIT Compiler,  Graal 
-  -  相关阅读：[***深入浅出 Java 10 的实验性 JIT 编译器 Graal***](https://www.infoq.cn/article/java-10-jit-compiler-graal) 
+- **JIT Compiler**：[***JEP 317***](https://openjdk.org/jeps/317) 实验性的 Java 编写的 JIT Compiler,  Graal
+  -  相关阅读：[***深入浅出 Java 10 的实验性 JIT 编译器 Graal***](https://www.infoq.cn/article/java-10-jit-compiler-graal)
 
 **更新**
 
@@ -202,7 +203,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 - 内存（Memory）：运行 JVM Heap 在用户可选的设备上分配，如：NV-DIMM
 - 应用层级的 CDS：JEP 310
-  - **Class-Data Sharing** 
+  - **Class-Data Sharing**
 - 工具（Tools）
   - 不推荐 JavaScript 引擎 Nashorn（[***JEP 335: Deprecate the Nashorn JavaScript Engine***](https://openjdk.java.net/jeps/335)）
   - 不推荐 Pack200 工具（[***JEP 336: Deprecate the Pack200 Tools and API***](https://openjdk.java.net/jeps/336)）
@@ -282,7 +283,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
   - `\` : 表示行尾，不引入换行符
   - `\s`：表示单个空格
 - [预览] **Record 类型**（[***JEP 359: Records (Preview)***](https://openjdk.java.net/jeps/359)）
-  -   Immutable data 
+  -   Immutable data
   -   `record Person(String name, Long id){}`
 - **Switch 语句优化(转正)**（[***JEP 361: Switch Expressions (Standard)***](https://openjdk.java.net/jeps/361)）
 
@@ -320,7 +321,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 - **文本块**（[***JEP 378: Text Blocks***](https://openjdk.java.net/jeps/378)）
 - 隐藏类（[***JEP 371: Hidden Classes***](https://openjdk.java.net/jeps/371)）
-  -  为框架（frameworks）所设计的，隐藏类不能直接被其他类的字节码使用，只能在运行时生成类并通过反射间接使用它们 
+  -  为框架（frameworks）所设计的，隐藏类不能直接被其他类的字节码使用，只能在运行时生成类并通过反射间接使用它们
 
 **更新**
 
@@ -347,7 +348,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 - 移除 Solaris 和 SPARC JVM 实现（[***JEP 381: Remove the Solaris and SPARC Ports***](https://openjdk.java.net/jeps/381)）
 - 线程（Threading）
   - 失效和不推荐使用偏向锁（[***JEP 374: Disable and Deprecate Biased Locking***](https://openjdk.java.net/jeps/374)）
-    -  偏向锁的引入增加了 JVM 的复杂性大于其带来的性能提升 
+    -  偏向锁的引入增加了 JVM 的复杂性大于其带来的性能提升
 - 垃圾回收（Garbage Collection）
   - ZGC
     - 正式发布（[***JEP 377: ZGC: A Scalable Low-Latency Garbage Collector***](https://openjdk.java.net/jeps/377)）
@@ -372,7 +373,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 - 模块化（Modular）：JDK 内部 API 默认强封装（[***JEP 396: Strongly Encapsulate JDK Internals by Default***](https://openjdk.java.net/jeps/396)）
 - [孵化] 向量 API（[***JEP 338: Vector API (Incubator)***](https://openjdk.java.net/jeps/338)）
-  -   API 将使开发人员能够轻松地用 Java 编写可移植的高性能向量算法 
+  -   API 将使开发人员能够轻松地用 Java 编写可移植的高性能向量算法
 - [预览] Sealed 类（[***JEP 397: Sealed Classes (Second Preview)***](https://openjdk.java.net/jeps/397)）
 
 ### 主要 API 变化
@@ -396,7 +397,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 - 源码（SourceCode）：
   - 激活 C++ 14 特性（[***JEP 347: Enable C++14 Language Features***](https://openjdk.java.net/jeps/347)）
   - 迁移到 Git 上（[***JEP 357: Migrate from Mercurial to Git***](https://openjdk.java.net/jeps/357)）
-    -  在此之前，OpenJDK 源代码是使用版本管理工具 Mercurial 进行管理，现在迁移到了 Git 
+    -  在此之前，OpenJDK 源代码是使用版本管理工具 Mercurial 进行管理，现在迁移到了 Git
   - Alpine Linux 实现（[***JEP 386: Alpine Linux Port***](https://openjdk.java.net/jeps/386)）
   - Windows/AArch64 实现（[***JEP 388: Windows/AArch64 Port***](https://openjdk.java.net/jeps/388)）
 
@@ -415,14 +416,16 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 **引入**
 
 - Sealed 类正式引入（[***JEP 409: Sealed Classes***](https://openjdk.java.net/jeps/409)）
+  - `sealed`：修饰类/接口，用来描述这个类/接口为密封类/接口
+  - `non-sealed`：修饰类/接口，用来描述这个类/接口为非密封类/接口
+  - `permits`：用在`extends`和`implements`之后，指定可以继承或实现的类
 - 浮点数：浮点数默认 `strictfp`（[***JEP 306: Restore Always-Strict Floating-Point Semantics***](https://openjdk.java.net/jeps/306)）
 
 **更新**
 
 - 模块化（Modular）：JDK 内部 API 强封装（[***JEP 403: Strongly Encapsulate JDK Internals***](https://openjdk.java.net/jeps/403)）
 - [预览] Switch 语句增强模式匹配（[***JEP 406: Pattern Matching for switch (Preview)***](https://openjdk.java.net/jeps/406)）
-  - `case Integer i -> String.format("int %d", i);`
-  - `case null -> System.out.println("Oops");`
+  - 类似 `instanceof` 的匹配+转换: `case Integer i -> String.format("int %d", i);`
 - [孵化] 向量 API（[***JEP 414: Vector API (Second Incubator)***](https://openjdk.java.net/jeps/414)）
 
 ### 主要 API 变化
@@ -431,7 +434,7 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 - [孵化] 外部 Native 函数和内存 API（[***JEP 412: Foreign Function & Memory API (Incubator)***](https://openjdk.java.net/jeps/412)）
 - 关联：
-    - [***JEP 424: Foreign Function & Memory API (Preview)***](https://openjdk.java.net/jeps/424)
+  - [***JEP 424: Foreign Function & Memory API (Preview)***](https://openjdk.java.net/jeps/424)
   - [***JEP 389: Foreign Linker API (Incubator)***](https://openjdk.java.net/jeps/389)
     - [***JEP 393: Foreign-Memory Access API (Third Incubator)***](https://openjdk.java.net/jeps/393)
 
@@ -467,29 +470,30 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 **更新**
 
-- [孵化] 向量 API（[JEP 417: Vector API (Third Incubator)](https://openjdk.java.net/jeps/417)）
-- [预览] `switch`语句模式匹配（[JEP 420: Pattern Matching for switch (Second Preview)](https://openjdk.java.net/jeps/420)）
+- [孵化] 向量 API [***JEP 417: Vector API (Third Incubator)***](https://openjdk.java.net/jeps/417)
+- [预览] `switch`语句模式匹配 [***JEP 420: Pattern Matching for switch (Second Preview)***](https://openjdk.java.net/jeps/420)
+- 默认字符集为 UTF-8 [***JEP 400:UTF-8 by Default***](https://openjdk.java.net/jeps/400)
 
 ### 主要 API 变化
 
 **更新**
 
-- [孵化] 外部 Native 函数和内存 API（[JEP 419: Foreign Function & Memory API (Second Incubator)](https://openjdk.java.net/jeps/419)）
+- [孵化] 外部 Native 函数和内存 API [***JEP 419: Foreign Function & Memory API (Second Incubator)***](https://openjdk.java.net/jeps/419)
 - 输入/输出（I/O）：
-  - UTF-8 作为默认字符（[JEP 400: UTF-8 by Default](https://openjdk.java.net/jeps/400)）
+  - UTF-8 作为默认字符 [***JEP 400: UTF-8 by Default***](https://openjdk.java.net/jeps/400)
 - 反射（Reflection）：
-  - 基于 MethodHandlers 重新实现核心反射API（[JEP 416: Reimplement Core Reflection with Method Handles](https://openjdk.java.net/jeps/416)）
+  - 基于 `MethodHandlers` 重新实现核心反射API [***JEP 416: Reimplement Core Reflection with Method Handles***](https://openjdk.java.net/jeps/416)
 - 网络（Network）：
-  - 简单 Web Server（[JEP 408: Simple Web Server](https://openjdk.java.net/jeps/408)）
-  - IP 地址解析（[JEP 418: Internet-Address Resolution SPI](https://openjdk.java.net/jeps/418)）
+  - 简单 Web Server [***JEP 408: Simple Web Server***](https://openjdk.java.net/jeps/408)
+  - IP 地址解析 [***JEP 418: Internet-Address Resolution SPI***](https://openjdk.java.net/jeps/418)
 
 ### 主要 JVM 变化
 
 **更新**
 
-- 不推荐 Finalization，未来删除（[JEP 421: Deprecate Finalization for Removal](https://openjdk.java.net/jeps/421)）
+- 不推荐 Finalization，未来删除 [***JEP 421: Deprecate Finalization for Removal***](https://openjdk.java.net/jeps/421)
 - 工具（Tools）
-  - javadoc：API 文档增加代码片段（[JEP 413: Code Snippets in Java API Documentation](https://openjdk.java.net/jeps/413)）
+  - javadoc：API 文档增加代码片段 [***JEP 413: Code Snippets in Java API Documentation***](https://openjdk.java.net/jeps/413)
 
 ## Java 19
 
@@ -497,24 +501,25 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 **更新**
 
-- [预览] Record 模式（[JEP 405: Record Patterns (Preview)](https://openjdk.java.net/jeps/405)）
-- [预览] **虚拟线程**（[JEP 425: Virtual Threads (Preview)](https://openjdk.java.net/jeps/425)）
-- [预览] `switch`语句模式匹配（[JEP 427: Pattern Matching for switch (Third Preview)](https://openjdk.java.net/jeps/427)）
-- [孵化] 向量 API（[JEP 426: Vector API (Fourth Incubator)](https://openjdk.java.net/jeps/426)）
+- [预览] Record 模式（[***JEP 405: Record Patterns (Preview)***](https://openjdk.java.net/jeps/405)）
+- [预览] **虚拟线程**（[***JEP 425: Virtual Threads (Preview)***](https://openjdk.java.net/jeps/425)）
+- [预览] `switch`语句模式匹配（[***JEP 427: Pattern Matching for switch (Third Preview)***](https://openjdk.java.net/jeps/427)）
+- [孵化] 向量 API（[***JEP 426: Vector API (Fourth Incubator)***](https://openjdk.java.net/jeps/426)）
 
 ### 主要 API 变化
 
 **更新**
 
-- [预览] 外部 Native 函数和内存 API（[JEP 424: Foreign Function & Memory API (Preview)](https://openjdk.java.net/jeps/424)）
-- [孵化] 结构化并发（[JEP 428: Structured Concurrency (Incubator)](https://openjdk.java.net/jeps/428)）
+- [预览] 外部 Native 函数和内存 API（[***JEP 424: Foreign Function & Memory API (Preview)***](https://openjdk.java.net/jeps/424)）
+- [孵化] 结构化并发（[***JEP 428: Structured Concurrency (Incubator)***](https://openjdk.java.net/jeps/428)）
+  -  [`StructuredTaskScope`](https://download.java.net/java/early_access/loom/docs/api/jdk.incubator.concurrent/jdk/incubator/concurrent/StructuredTaskScope.html)
 
 ### 主要 JVM 变化
 
 **引入**
 
 - 源码（SourceCode）：
-  - Linux/RISC 支持（[JEP 422: Linux/RISC-V Port](https://openjdk.java.net/jeps/422)）
+  - Linux/RISC 支持（[***JEP 422: Linux/RISC-V Port***](https://openjdk.java.net/jeps/422)）
 
 ## Java 20
 
@@ -522,20 +527,18 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 **引入**
 
-- [预览] 虚拟线程（[JEP 436: Virtual Threads (Second Preview)](https://openjdk.java.net/jeps/436)）
-- [孵化] 作用域值（[JEP 429: Scoped Values (Incubator)](https://openjdk.java.net/jeps/429)）
-- [预览] Record 模式（[JEP 432: Record Patterns (Second Preview)](https://openjdk.java.net/jeps/432)）
-- [预览] `switch`语句模式匹配（[JEP 433: Pattern Matching for switch (Fourth Preview)](https://openjdk.java.net/jeps/433)）
-- [孵化] 向量 API（[JEP 438: Vector API (Fifth Incubator)](https://openjdk.java.net/jeps/438)）
+- [预览] 虚拟线程（[***JEP 436: Virtual Threads (Second Preview)***](https://openjdk.java.net/jeps/436)）
+- [孵化] 作用域值（[***JEP 429: Scoped Values (Incubator)***](https://openjdk.java.net/jeps/429)）
+- [预览] Record 模式（[***JEP 432: Record Patterns (Second Preview)***](https://openjdk.java.net/jeps/432)）
+- [预览] `switch`语句模式匹配（[***JEP 433: Pattern Matching for switch (Fourth Preview)***](https://openjdk.java.net/jeps/433)）
+- [孵化] 向量 API（[***JEP 438: Vector API (Fifth Incubator)***](https://openjdk.java.net/jeps/438)）
 
 ### 主要 API 变化
 
 **更新**
 
-- [预览] 外部 Native 函数和内存 API（[JEP 434: Foreign Function & Memory API (Second Preview)](https://openjdk.java.net/jeps/434)）
-- [孵化] 结构化并发（[JEP 437: Structured Concurrency (Second Incubator)](https://openjdk.java.net/jeps/437)）
-
-
+- [预览] 外部 Native 函数和内存 API（[***JEP 434: Foreign Function & Memory API (Second Preview)***](https://openjdk.java.net/jeps/434)）
+- [孵化] 结构化并发（[***JEP 437: Structured Concurrency (Second Incubator)***](https://openjdk.java.net/jeps/437)）
 
 ## Java 21（LTS）
 
@@ -543,46 +546,47 @@ Java 8 之后的10年里 Oracle 先后发布了13个版本, 其中3个 LTS 版�
 
 **引入**
 
-- 虚拟线程（[JEP 444: Virtual Threads](https://openjdk.java.net/jeps/444)）
-- Record 模式（[JEP 440: Record Patterns](https://openjdk.java.net/jeps/440)）
-- `switch`语句模式匹配（[JEP 441: Pattern Matching for switch](https://openjdk.java.net/jeps/441)）
-- [预览] String 模板（[JEP 430: String Templates (Preview)](https://openjdk.java.net/jeps/430)）
-- [预览] 未命名模式和变量（[JEP 443: Unnamed Patterns and Variables (Preview)](https://openjdk.java.net/jeps/443)）
-- [预览] 未命名类和实例 main 方法（[JEP 445: Unnamed Classes and Instance Main Methods (Preview)](https://openjdk.java.net/jeps/445)）
-- [预览] 作用域值（[JEP 446: Scoped Values (Preview)](https://openjdk.java.net/jeps/446)）
+- 虚拟线程（[***JEP 444: Virtual Threads***](https://openjdk.java.net/jeps/444)）
+  - [***虚拟线程原理及性能分析｜得物技术***](https://mp.weixin.qq.com/s/vdLXhZdWyxc6K-D3Aj03LA)
+- Record 模式（[***JEP 440: Record Patterns***](https://openjdk.java.net/jeps/440)）
+- `switch`语句模式匹配（[***JEP 441: Pattern Matching for switch***](https://openjdk.java.net/jeps/441)）
+- [预览] String 模板（[***JEP 430: String Templates (Preview)***](https://openjdk.java.net/jeps/430)）
+- [预览] 未命名模式和变量（[***JEP 443: Unnamed Patterns and Variables (Preview)***](https://openjdk.java.net/jeps/443)）
+- [预览] 未命名类和实例 main 方法（[***JEP 445: Unnamed Classes and Instance Main Methods (Preview)***](https://openjdk.java.net/jeps/445)）
+- [预览] 作用域值（[***JEP 446: Scoped Values (Preview)***](https://openjdk.java.net/jeps/446)）
 
 **更新**
 
-- [孵化] 向量 API（[JEP 448: Vector API (Sixth Incubator)](https://openjdk.java.net/jeps/448)）
+- [孵化] 向量 API（[***JEP 448: Vector API (Sixth Incubator)***](https://openjdk.java.net/jeps/448)）
 
 ### 主要 API 变化
 
 **引入**
 
-- 集合（Collections）：有序集合（[JEP 431: Sequenced Collections](https://openjdk.java.net/jeps/431)）
-- 安全（Security）：Key 封装 API（[JEP 452: Key Encapsulation Mechanism API](https://openjdk.org/jeps/452)）
+- 集合（Collections）：有序集合（[***JEP 431: Sequenced Collections***](https://openjdk.java.net/jeps/431)）
+- 安全（Security）：Key 封装 API（[***JEP 452: Key Encapsulation Mechanism API***](https://openjdk.org/jeps/452)）
 
 **更新**
 
-- [预览] 外部 Native 函数和内存 API（[JEP 442: Foreign Function & Memory API (Third Preview)](https://openjdk.java.net/jeps/442)）
-- [预览] 结构化并发（[JEP 453: Structured Concurrency (Preview)](https://openjdk.java.net/jeps/453)）
+- [预览] 外部 Native 函数和内存 API（[***JEP 442: Foreign Function & Memory API (Third Preview)***](https://openjdk.java.net/jeps/442)）
+- [预览] 结构化并发（[***JEP 453: Structured Concurrency (Preview)***](https://openjdk.java.net/jeps/453)）
 
 ### 主要 JVM 变化
 
 **更新**
 
 - 垃圾回收（Garbage Collection）
-  - ZGC
-    - 分代 ZGC（[JEP 439: Generational ZGC](https://openjdk.java.net/jeps/439)）
+  - 分代 ZGC（[***JEP 439: Generational ZGC***](https://openjdk.java.net/jeps/439)）
+    - 目前默认关闭, 未来会设置成默认, 可以通过配置打开: `-XX:+UseZGC -XX:+ZGenerational`
 - 源码（SourceCode）：
-  - 移除 Windows 32 位 x86 实现（[JEP 449: Deprecate the Windows 32-bit x86 Port for Removal](https://openjdk.java.net/jeps/449)）
-- 预备禁止动态 Agent 加载（[JEP 451: Prepare to Disallow the Dynamic Loading of Agents](https://openjdk.java.net/jeps/451)）
+  - 移除 Windows 32 位 x86 实现（[***JEP 449: Deprecate the Windows 32-bit x86 Port for Removal***](https://openjdk.java.net/jeps/449)）
+- 预备禁止动态 Agent 加载（[***JEP 451: Prepare to Disallow the Dynamic Loading of Agents***](https://openjdk.java.net/jeps/451)）
 
 # 是否升级
 
 > 现代 Java 越来越偏底层, 越来越难, 很多黑科技, 比如指令优化这些都不是给没有经验的小白玩的, 是给资深有经验的人使用的.
 
-从 Java 8 到 21, 无论是性能还是内存的优化, 还是更多的底层支持, 都得到了质的飞跃(String 压缩, ZGC, GraalVm等), 但升不升级还是需要慎重考虑. 
+从 Java 8 到 21, 无论是性能还是内存的优化, 还是更多的底层支持, 都得到了质的飞跃(String 压缩, ZGC, GraalVm等), 但升不升级还是需要慎重考虑.
 
 如果应用依赖比较少, 升级难度还没那么大. 如果依赖比较多, 那么就要非常慎重了, 因为由于内部 Java 内部 API 的变动(比如 `@PostCostruct` 被移除了, StackTrace 有了新的 API), 如果第三框架没有适配, 那就寄了. 新的项目可以尝试使用最新的版本以享受新特性带来的性能提升, 但可能很多公共模块要重新适配, 对开发人员提出更高的要求.
 
